<resources>
    <!-- activity sign in sign up -->
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>

    <!-- fragment sign in sign up -->
    <string name="sign_in_sign_up_head_line_1">EARN. CONNECT.\nCONTRIBUTE TO SOCIETY</string>
    <string name="sign_in_sign_up_title_1">Partner with us to drive your own\nlivelihood and more</string>
    <string name="sign_in_sign_up_head_line_2">EARN MORE\n</string>
    <string name="sign_in_sign_up_title_2">With more passengers on Catch, the\nopportunities to earn are endless\n</string>
    <string name="sign_in_sign_up_head_line_3">SAFETY\n</string>
    <string name="sign_in_sign_up_title_3">Be your own boss by accepting more jobs\nthrough our secure network\n</string>
    <string name="sign_in_sign_up_head_line_4">COMMUNITY\n</string>
    <string name="sign_in_sign_up_title_4">Be part of Southeast Asis\'s largest\ntransport network\n</string>

    <!-- fragment sign up -->
    <string name="register">Register</string>
    <string name="your_name">Your Name</string>
    <string name="your_surname">Your Surname</string>
    <string name="your_email">E-mail Address</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up_id">Taxi ID</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_number">0800000000</string>
    <string name="username_register">Username</string>
    <string name="password_register">Password</string>
    <string name="re_password_register">Re-Password</string>
    <string name="register_button">Register</string>
    <string name="ok_button">Sign Up</string>
    <string name="your_sex_register">sex</string>
    <string name="head_sign_up_id">Taxi ID</string>
    <string name="head_e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- menu drawerlayout mainactivity -->
    <string name="menu_1">History</string>
    <string name="menu_2">Catch Wallet</string>
    <string name="menu_3">Catch Reward</string>
    <string name="menu_4">Check</string>
    <string name="menu_5">Settings</string>
    <string name="menu_6">Call Center</string>
    <string name="menu_7">Block</string>

    <!-- menu catch reward -->
    <string name="reward_points">&#160;points</string>
    <!-- menu catch reward me-->
    <string name="promotion_me_name_1">THB 20 Off</string>
    <!-- menu catch reward all-->
    <string name="promotion_name_1">Get 10% discount</string>
    <string name="promotion_name_2">Free 1 movie ticket</string>
    <string name="promotion_name_3">Get 10% discount</string>

    <!-- name actionbar -->
    <string name="history_actionbar">Job History</string>
    <string name="wallet_actionbar">Wallet</string>
    <string name="settings_actionbar">Settings</string>
    <string name="profile_actionbar">Profile</string>
    <string name="call_center_actionbar">Call Center</string>
    <string name="block_actionbar">Block Customer</string>

    <!-- application -->
    <string name="app_name">CatchTaxiDriver</string>
    <string name="title_activity_maps">CatchDriver</string>
    <string name="open_drawer">Open Menu</string>
    <string name="close_drawer">Close Menu</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_device">Sign in with Device</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_don_t_have_an_account">Sign Up</string>
    <string name="welcome_back_sign_in">Welcome back!</string>
    <string name="sign_in_now_sign_in">Sign in now</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="customername">CustomerName</string>
    <string name="catch_pay">CatchPay</string>
    <string name="cashback">Cashback</string>
    <string name="cancel_button">Cancel</string>
    <string name="choose_button">Choose</string>
    <string name="button_choose_customer">Choose Customer</string>
    <string name="button_pick_up">Pick Up</string>
    <string name="button_arrived">Arrived</string>
    <string name="dialog_payments">Customer Payments :</string>
    <string name="thai_bath">&#160;฿</string>
    <string name="dialog_button_ok">Ok</string>
    <string name="view_choose_customer_text_start">Start</string>
    <string name="view_choose_customer_text_destination">Destination</string>
    <string name="dialog_finish">Finish !</string>
    <string name="view_transfer_top_up_text_from">From</string>
    <string name="view_transfer_top_up_text_to">to</string>
    <string name="cash_back_top_up_with_account">Top Up With Account</string>
    <string name="cash_back_top_up_with_pin">Top Up With Pin</string>
    <string name="e_wallet_transfer_account">Transfer Account</string>
    <string name="e_wallet_transaction_history">E-Wallet Transaction History</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_auto_match">Auto Match</string>
    <string name="settings_sort_customer">Sort Customer By</string>
    <string name="profile_taxi_id">Taxi ID</string>
    <string name="profile_email_address">Email Address</string>
    <string name="profile_mobile_number">Mobile Number</string>
    <string name="profile_name">Name</string>
    <string name="reward_activity_in_put_your_promotion">Enter your promotion code here</string>
    <string name="view_reward_details">Details</string>
    <string name="dialog_please_enter_top_up_pin">Please enter top-up Pin</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_previous">Previous</string>
    <string name="dialog_get_privilege">Get Privilege</string>
    <string name="dialog_thank">Thank !</string>
    <string name="please_enter_your_details_only_name_will_show_your_customer">Please enter your details. Only name will show your customers</string>
    <string name="enter_your_mobile_number">Enter your mobile number.</string>
    <string name="enter_your_email_address">Enter your email address.</string>
    <string name="edit_number"><u>Edit number</u></string>
    <string name="request_a_new_code"><u>Request a new code</u></string>
    <string name="button_call">Call</string>
    <string name="button_chat">Chat</string>
    <string name="button_cancel">Cancel</string>
    <string name="earn_point_message">You have not earned any points yet.\nTake ride to start eating points!</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="distance">Distance</string>
    <string name="details">Details</string>
    <string name="done">DONE</string>
    <string name="customer_deal_cancel">Customer deal cancel</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="comment">Comment</string>
    <string name="arrived">Arrived!</string>
    <string name="comment_here">Comment here</string>
    <string name="assessment">Assessment</string>
    <string name="perfect">Perfect!</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="adjust">Adjust</string>
    <string name="bad">Bad</string>
    <string name="finish">finish</string>
    <string name="enter_the_4_digit_code_sent_to">Enter the 4-digit code sent to:</string>
    <string name="didn_t_receive_it">Didn\'t receive it?</string>
    <string name="you_have_not_spent_any_points_yet">You have not spent any points yet.</string>
    <string name="username_surname">Username Surname</string>
    <string name="enter_your_name">Enter your name.</string>
    <string name="enter_your_taxi_id">Enter your Taxi ID.</string>
    <string name="save">save</string>
    <string name="next">next</string>
    <string name="choose_your_profile">choose your profile</string>
    <string name="enter_an_amount_thb">Enter an amount (THB)</string>
    <string name="ok">Ok</string>
    <string name="customer">Customer</string>
    <string name="rate">Rate</string>
    <string name="available_points">&#160;Available Points</string>
    <string name="status_on_off">Status off-on</string>
    <string name="transfer_n">Transfer\n</string>
    <string name="money">Money</string>
    <string name="open_location">please open your location</string>
    <string name="if_money_in_your_e_wallet_nless_than_thb_25_nyou_can_t_pick_up_customer">if money in your E-wallet\nless than THB 25\nyou can\'t pick up customer</string>
    <string name="you_want_cancel_your_customer">You want cancel deal with your customer\nIf you cancel deal with your customer. \nMaybe you got points taken off.\nAre you sure? </string>

    <!-- History From -->
    <string-array name="From">
        <item>Suvarnabhumi Airport (BKK), 999  Nong Prue, Amphoe Bang Phli, Chang Wat Samut Prakan 10540, Thailand</item>
        <item>Don Mueang International Airport (DMK), 222 Vibhavadi Rangsit Rd, Khwaeng Sanambin, Khet Don Mueang, Krung Thep Maha Nakhon 10210, Thailand</item>
        <item>Thanon Phaya Thai, Ratchathewi, Bangkok 10400, Thailand</item>
        <item>Thanon Khao San, Khwaeng Talat Yot, Khet Phra Nakhon, Krung Thep Maha Nakhon 10200, Thailand</item>
    </string-array>

    <!-- Hisory To -->
    <string-array name="To">
        <item>991 Siam Paragon Rama I Rd, Khwaeng Pathum Wan, Khet Pathum Wan, Krung Thep Maha Nakhon 10330, Thailand</item>
        <item>Yaowarat Rd, Krung Thep Maha Nakhon, Thailand</item>
        <item>Thanon Chalong Krung, Khwaeng Lam Prathew, Khet Lat Krabang, Krung Thep Maha Nakhon 10520, Thailand</item>
        <item>4,4/1-4/2 4/4 Ratchadamri Rd, Pathum Wan, Bangkok 10330, Thailand</item>
    </string-array>

    <!-- Customer Start Head -->
    <string-array name="CustomerStartHead">
        <item>Suvarnabhumi Airport</item>
        <item>Victory Monument</item>
        <item>Siam Paragon</item>
        <item>Don Mueang International Airport</item>
    </string-array>

    <!-- Customer Destination Head -->
    <string-array name="CustomerDestinationHead">
        <item>KMITL</item>
        <item>Central World</item>
        <item>Yaowarat Rd</item>
        <item>Chatuchak Market</item>
    </string-array>

    <!-- Customer Start -->
    <string-array name="CustomerStart">
        <item>Suvarnabhumi Airport (BKK), 999  Nong Prue, Amphoe Bang Phli, Chang Wat Samut Prakan 10540, Thailand</item>
        <item>Thanon Phaya Thai, Ratchathewi, Bangkok 10400, Thailand</item>
        <item>991 Siam Paragon Rama I Rd, Khwaeng Pathum Wan, Khet Pathum Wan, Krung Thep Maha Nakhon 10330, Thailand</item>
        <item>Don Mueang International Airport (DMK), 222 Vibhavadi Rangsit Rd, Khwaeng Sanambin, Khet Don Mueang, Krung Thep Maha Nakhon 10210, Thailand</item>
    </string-array>

    <!-- Customer Destination -->
    <string-array name="CustomerDestination">
        <item>3 Thanon Chalong Krung, Khwaeng Lam Prathew, Khet Lat Krabang, Krung Thep Maha Nakhon 10520, Thailand</item>
        <item>4,4/1-4/2 4/4 Ratchadamri Rd, Pathum Wan, Bangkok 10330, Thailand</item>
        <item>Yaowarat Rd, Krung Thep Maha Nakhon, Thailand</item>
        <item>587/10 Kamphaeng Phet 2 Rd Khwaeng Chatuchak, Khet Chatuchak Krung Thep Maha Nakhon 10900 Thailand</item>
    </string-array>

    <!-- setting customer sort -->
    <string-array name="CustomerSort">
        <item>Rate</item>
        <item>Distance</item>
    </string-array>
</resources>
