<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_grab_color"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/fragment_page_padding">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back_sign_in"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_now_sign_in"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_head_line"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>

    <s8010027.kritchanon.catchtaxidriver.view.ImageTextButtonView
        android:id="@+id/btnSignInWithDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_image_text_button_view"
        />

    <s8010027.kritchanon.catchtaxidriver.view.ImageTextButtonView
        android:id="@+id/btnSignInWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_image_text_button_view"
        />

    <s8010027.kritchanon.catchtaxidriver.view.ImageTextButtonView
        android:id="@+id/btnSignInWithFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/not_use_color"
            android:minWidth="0dp"
            android:text="@string/sign_up_don_t_have_an_account"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"

            />
    </LinearLayout>


</LinearLayout>