<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/main_grab_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Arrived!"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/dialog_head_text"
            android:layout_gravity="center"/>

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_payments"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/dialog_money_margin"
            android:layout_marginBottom="@dimen/dialog_money_margin"
            android:weightSum="1">

            <EditText
                android:id="@+id/edMoney"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:inputType="number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thai_bath"
                android:textSize="36dp"
                android:textStyle="bold"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button_ok"
            android:background="@drawable/selector_dialog_button"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            />

    </LinearLayout>


</LinearLayout>