<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryThemeKrungsri"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="next"
            android:minWidth="60dp"
            android:textColor="@android:color/white"
            android:background="@null"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/please_enter_your_details_only_drivers_assigned_to_you_will_see_them" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:weightSum="12">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:maxLines="1" />
                <TextView
                    android:id="@+id/tvMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_mobile_number"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/text_not_input_size"
                    android:visibility="invisible"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:weightSum="12">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_name"
                    android:inputType="text" />
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enter your name."
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/text_not_input_size"
                    android:visibility="invisible"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:weightSum="12">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_email_address"
                    android:inputType="text" />
                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_email_address"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/text_not_input_size"
                    android:visibility="invisible"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:weightSum="12">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_taxi_id"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/tvTaxiId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enter your Taxi ID."
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/text_not_input_size"
                    android:visibility="invisible"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="By registering, I have read and agreed to the\nTerms of Use and the Privacy Policy"/>


        </LinearLayout>
    </ScrollView>


</LinearLayout>